initialized npm, added header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </head>
 <!-- <body id="gradient"> -->
 <body>
-    <header>
+
+    <div id="root"></div>
+
+    <!-- <header>
         <div class="head">
             <img src="logo.svg" alt="Logo">
             <a href="/">Abbra-Cadabra</a>
@@ -110,18 +113,18 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt totam nulla dolorem qui, nostrum unde doloremque corrupti autem suscipit temporibus, ratione ea perferendis quam ullam fugiat tenetur, enim deleniti harum.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Enim dolorum culpa commodi facere error quis ut explicabo, non sit reiciendis asperiores quo maxime inventore atque quod, aliquam eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, repudiandae. Repellendus mollitia distinctio asperiores, sunt fugiat rem praesentium minima, laboriosam illo nulla aliquid impedit aliquam doloribus repellat autem labore officiis!</p>
-    </main>
+    </main> -->
     <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="app.js"></script>- -->
-    <script src="slider.js"></script>
+    <!-- <script src="slider.js"></script>
     <script>
         slideShow('.slider', {
           isAutoplay: true
         });
       </script>
-    <script src="background.js"></script>
+    <script src="background.js"></script> -->
 </body>
 </html>
 
