--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abbra-Cadabra</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
-	<!-- <link rel="stylesheet" type="text/css" href="slick/slick.css">
-	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
@@ -17,13 +15,13 @@
 
     <div id="root"></div>
 
-    <!-- <header>
+    <header>
         <div class="head">
-            <img src="logo.svg" alt="Logo">
-            <a href="/">Abbra-Cadabra</a>
+            <img src="images/apple_logo.png" alt="Logo">
+            <a href="index.html">Abbra-Cadabra</a>
             <ul class="cont-phones">
-                <li><img src="lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
-                <li><img src="vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
+                <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
+                <li><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
             </ul>
             <ul class="address">
                 <li>Kyiv, V.Vasylkivska str. 28</li>
@@ -35,13 +33,12 @@
                 <li><a href="/">О нас</a></li>
                 <li><a href="/">Ремонт</a>
                     <ul class="sub-menu-repair">
-                        <li><a href="/">Apple</a>
+                        <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li>iPhone</li>
-                                <li>iPad</li>
-                                <li>iPod</li>
-                                <li>Watch</li>
-                                <li>MacBook</li>
+                                <li><a href="/">iPhone</a></li>
+                                <li><a href="/">iPad</a></li>
+                                <li><a href="/">Watch</a></li>
+                                <li><a href="/">MacBook</a></li>
                             </ul>
                         </li>
                         <li><a href="/">Other</a></li>
@@ -49,16 +46,21 @@
                 </li>
                 <li><a href="/">Устройства</a></li>
                 <li><a href="/">Аксессуары</a></li>
-                <li><a href="/">Новости и акции</a></li>
-                <li>Контакты
+                <li><a href="news.html">Новости и акции</a></li>
+                <li><span>Контакты</span>
                     <ul class="sub-menu-cont">
-                        <li><a href="contacts.html">Карта/График</a></li>
+                        <li>
+                            <a href="contacts.html">Карта/График
+                            </a>
+                        </li>
+                        <li>
+                            <a href="facebook.com">
+                                <img src="images/facebook_logo.png" alt="facebook">
+                            </a>
+                        </li>
                         <li>
                             <a href="instagram.com">
-                                <img src="instagram_logo.png" alt="instagram">
-                            </a>
-                            <a href="facebook.com">
-                                <img src="facebook_logo.png" alt="facebook">
+                                <img src="images/instagram_logo.png" alt="instagram">
                             </a>
                         </li>
                     </ul>
@@ -71,16 +73,20 @@
         <div class="slider__wrapper">
           <div class="slider__items">
             <div class="slider__item">
-              <div style="height: 300px; background: orange;"></div>
+                <img src="images/slider_image1.jpg" alt="">
+                <div class="details"><a href="/">Подробнее</a></div>
             </div>
             <div class="slider__item">
-              <div style="height: 300px; background: green;"></div>
+                <img src="images/slider_image2.png" alt="">
+                <div class="details"><a href="/">Подробнее</a></div>
             </div>
             <div class="slider__item">
-              <div style="height: 300px; background: violet;"></div>
+                <img src="images/slider_image3.jpg" alt="">
+                <div class="details"><a href="/">Подробнее</a></div>
             </div>
             <div class="slider__item">
-              <div style="height: 300px; background: coral;"></div>
+                <img src="images/slider_image4.jpg" alt="">
+                <div class="details"><a href="/">Подробнее</a></div>
             </div>
           </div>
         </div>
@@ -89,23 +95,6 @@
     </div>
 
     <main>
-            <div class="repair-container">
-                <div class="repair">
-                    Ремонт техники Apple:
-                    <h2><a href="">iPhone</a></h2>
-                    <h2><a href="">iPad</a></h2>
-                    <h2><a href="">iPod</a></h2>
-                    <h2><a href="">Watch</a></h2>
-                    <h2><a href="">MacBook</a></h2>
-                </div>
-                <div class="repair-iphone">
-                    <a href="">Подробнее</a>
-                </div>
-                <div class="repair-ipad"></div>
-                <div class="repair-ipod"></div>
-                <div class="repair-watch"></div>
-                <div class="repair-macbook"></div>
-            </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Enim dolorum culpa commodi facere error quis ut explicabo, non sit reiciendis asperiores quo maxime inventore atque quod, aliquam eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, repudiandae. Repellendus mollitia distinctio asperiores, sunt fugiat rem praesentium minima, laboriosam illo nulla aliquid impedit aliquam doloribus repellat autem labore officiis!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore dolorem accusamus molestias modi similique quos perspiciatis soluta incidunt hic fugit fuga amet, suscipit repellendus corrupti delectus unde deserunt numquam commodi!</p>
@@ -113,18 +102,18 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt totam nulla dolorem qui, nostrum unde doloremque corrupti autem suscipit temporibus, ratione ea perferendis quam ullam fugiat tenetur, enim deleniti harum.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Enim dolorum culpa commodi facere error quis ut explicabo, non sit reiciendis asperiores quo maxime inventore atque quod, aliquam eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, repudiandae. Repellendus mollitia distinctio asperiores, sunt fugiat rem praesentium minima, laboriosam illo nulla aliquid impedit aliquam doloribus repellat autem labore officiis!</p>
-    </main> -->
-    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    </main>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="app.js"></script>- -->
-    <!-- <script src="slider.js"></script>
+    <script src="app.js"></script>
+    <script src="slider.js"></script>
     <script>
         slideShow('.slider', {
           isAutoplay: true
         });
       </script>
-    <script src="background.js"></script> -->
+    <script src="background.js"></script>
 </body>
 </html>
 
