--- a/source/repair-apple.html
+++ b/source/repair-apple.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости и акции</title>
+    <title>Ремонт Apple</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="reapir-apple.css">
@@ -33,7 +33,7 @@
                     <ul class="sub-menu-repair">
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="/">iPhone</a></li>
+                                <li><a href="repair-apple-iphone.html">iPhone</a></li>
                                 <li><a href="/">iPad</a></li>
                                 <li><a href="/">Watch</a></li>
                                 <li><a href="/">MacBook</a></li>
@@ -69,20 +69,30 @@
 
     <main>
         <div class="repair_apple">
-            <div class="wrap">
-                <div class="repair_iphone"></div>
-                <a href="/">iPhone</a>
-            </div>
-            <div class="wrap">
-                <div class="repair_ipad"></div>
-                <a href="/">iPad</a>
-            </div>
-            <div class="wrap">
-                <div class="repair_watch"></div>
-                <a href="/">iPad</a>
-            </div>
-
-            <div class="repair_macbook"></div>
+                <div class="repair_iphone">
+                    <a href="/">
+                        <div class="repair_iphone_img"></div>
+                        iPhone
+                    </a>
+                </div>
+                <div class="repair_ipad">
+                    <a href="/">
+                        <div class="repair_ipad_img"></div>
+                        iPad
+                    </a>
+                </div>
+                <div class="repair_watch">
+                    <a href="/">
+                        <div class="repair_watch_img"></div>
+                        Watch
+                    </a>
+                </div>
+                <div class="repair_macbook">
+                    <a href="/">
+                        <div class="repair_macbook_img"></div>
+                        MacBook
+                    </a>
+                </div>
         </div>
     </main>
 </body>
