added more pictures

--- a/source/contacts.html
+++ b/source/contacts.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="head">
-            <img src="images/apple_logo.png" alt="Logo">
+            <img src="images/apple_jobs_logo.png" alt="Logo">
             <a href="index.html">Abbra-Cadabra</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
