--- a/source/repair-apple-iphone.html
+++ b/source/repair-apple-iphone.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="head">
-            <img src="images/apple_logo.png" alt="Logo">
+            <img src="images/apple_jobs_logo.png" alt="Logo">
             <a href="index.html">Abbra-Cadabra</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -133,10 +133,16 @@
                         iPhone 7 Plus
                     </a>
                 </div>
-                <div class="iphone_7_max">
+                <div class="iphone_7">
                     <a href="/">
                         <div class="iphone_7_img"></div>
                         iPhone 7
+                    </a>
+                </div>
+                <div class="iphone_se">
+                    <a href="/">
+                        <div class="iphone_se_img"></div>
+                        iPhone SE
                     </a>
                 </div>
                 <div class="iphone_6s_plus">
@@ -161,12 +167,6 @@
                     <a href="/">
                         <div class="iphone_6_img"></div>
                         iPhone 6
-                    </a>
-                </div>
-                <div class="iphone_se">
-                    <a href="/">
-                        <div class="iphone_se_img"></div>
-                        iPhone SE
                     </a>
                 </div>
                 <div class="iphone_5c">
