--- a/source/repair-apple.html
+++ b/source/repair-apple.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="head">
-            <img src="images/apple_logo.png" alt="Logo">
+            <img src="images/apple_jobs_logo.png" alt="Logo">
             <a href="index.html">Abbra-Cadabra</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -70,25 +70,25 @@
     <main>
         <div class="repair_apple">
                 <div class="repair_iphone">
-                    <a href="/">
+                    <a href="repair-apple-iphone.html">
                         <div class="repair_iphone_img"></div>
                         iPhone
                     </a>
                 </div>
                 <div class="repair_ipad">
-                    <a href="/">
+                    <a href="#">
                         <div class="repair_ipad_img"></div>
                         iPad
                     </a>
                 </div>
                 <div class="repair_watch">
-                    <a href="/">
+                    <a href="#">
                         <div class="repair_watch_img"></div>
                         Watch
                     </a>
                 </div>
                 <div class="repair_macbook">
-                    <a href="/">
+                    <a href="#">
                         <div class="repair_macbook_img"></div>
                         MacBook
                     </a>
