--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="head">
-            <img src="images/apple_logo.png" alt="Logo">
+            <img src="images/apple_jobs_logo.png" alt="Logo">
             <a href="index.html">Abbra-Cadabra</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -30,22 +30,22 @@
         </div>
         <div class="menu">
             <ul class="main-menu">
-                <li><a href="/">О нас</a></li>
-                <li><a href="/">Ремонт</a>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Ремонт</a>
                     <ul class="sub-menu-repair">
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="/">iPhone</a></li>
-                                <li><a href="/">iPad</a></li>
-                                <li><a href="/">Watch</a></li>
-                                <li><a href="/">MacBook</a></li>
+                                <li><a href="#">iPhone</a></li>
+                                <li><a href="#">iPad</a></li>
+                                <li><a href="#">Watch</a></li>
+                                <li><a href="#">MacBook</a></li>
                             </ul>
                         </li>
-                        <li><a href="/">Other</a></li>
+                        <li><a href="#">Other</a></li>
                     </ul>
                 </li>
-                <li><a href="/">Устройства</a></li>
-                <li><a href="/">Аксессуары</a></li>
+                <li><a href="#">Устройства</a></li>
+                <li><a href="#">Аксессуары</a></li>
                 <li><a href="news.html">Новости и акции</a></li>
                 <li><span>Контакты</span>
                     <ul class="sub-menu-cont">
@@ -54,12 +54,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="facebook.com">
+                            <a href="facebook.com">FB
                                 <img src="images/facebook_logo.png" alt="facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="instagram.com">
+                            <a href="instagram.com">Inst
                                 <img src="images/instagram_logo.png" alt="instagram">
                             </a>
                         </li>
