added more pages, finished page  with iphones

--- a/source/iphone-11-pro.html
+++ b/source/iphone-11-pro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone 11 Pro Max</title>
+    <title>Ремонт iPhone 11 Pro</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="iphone-11-pro-max.css">
@@ -68,12 +68,12 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone 11 Pro Max</h1>
+        <h1>Ремонт iPhone 11 Pro</h1>
         <h3>стоимость услуг по ремонту:</h3>
-        <div class="repair_iphone_11_pro_max"> 
-            <div class="iphone_11_pro_max">
-                <div class="iphone_11_pro_max_img"></div>
-                <h2>iPhone 11 Pro Max</h2>  
+        <div class="repair_iphone_11_pro"> 
+            <div class="iphone_11_pro">
+                <div class="iphone_11_pro_img"></div>
+                <h2>iPhone 11 Pro</h2>  
                 <h3>наши плюсы:</h3>
                 <div class="our_pluses">
                     <div class="quality">
@@ -108,12 +108,12 @@
                         <tr>
                             <td>Замена стекла</td>
                             <td>20 мин.</td>
-                            <td>3650</td>
+                            <td>2850</td>
                         </tr>
                         <tr>
                             <td>Замена дисплейного модуля Original</td>
                             <td>20 мин.</td>
-                            <td>12200</td>
+                            <td>12250</td>
                         </tr>
                         <tr>
                             <td>Восстановление функции True Tone</td>
@@ -123,7 +123,7 @@
                         <tr>
                             <td>Замена стекла задней крышки корпуса</td>
                             <td>1 ч.</td>
-                            <td>2850</td>
+                            <td>2650</td>
                         </tr>
                         <tr>
                             <td>Стекло основной камеры</td>
@@ -133,7 +133,7 @@
                         <tr>
                             <td>Корпус Original</td>
                             <td>60 мин.</td>
-                            <td>4150</td>
+                            <td>3950</td>
                         </tr>
                         <tr>
                             <td>Чистка после попадания влаги</td>
@@ -148,7 +148,7 @@
                         <tr>
                             <td>Основная камера Original</td>
                             <td>10 мин.</td>
-                            <td>3950</td>
+                            <td>3750</td>
                         </tr>
                         <tr>
                             <td>Передняя камера</td>
@@ -183,12 +183,12 @@
                         <tr>
                             <td>Полифонический динамик</td>
                             <td>15 мин.</td>
-                            <td>1150</td>
+                            <td>850</td>
                         </tr>
                         <tr>
                             <td>Микрофон</td>
                             <td>30 мин.</td>
-                            <td>1150</td>
+                            <td>1250</td>
                         </tr>
                         <tr>
                             <td>Вибро</td>
