--- a/source/repair-apple-iphone.html
+++ b/source/repair-apple-iphone.html
@@ -28,23 +28,23 @@
         </div>
         <div class="menu">
             <ul class="main-menu">
-                <li><a href="/">О нас</a></li>
-                <li><a href="/">Ремонт</a>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Ремонт</a>
                     <ul class="sub-menu-repair">
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="/">iPhone</a></li>
-                                <li><a href="/">iPad</a></li>
-                                <li><a href="/">Watch</a></li>
-                                <li><a href="/">MacBook</a></li>
+                                <li><a href="repair-apple-iphone.html">iPhone</a></li>
+                                <li><a href="#">iPad</a></li>
+                                <li><a href="#">Watch</a></li>
+                                <li><a href="#">MacBook</a></li>
                             </ul>
                         </li>
-                        <li><a href="/">Other</a></li>
+                        <li><a href="#">Other</a></li>
                     </ul>
                 </li>
-                <li><a href="/">Устройства</a></li>
-                <li><a href="/">Аксессуары</a></li>
-                <li><a href="/">Новости и акции</a></li>
+                <li><a href="#">Устройства</a></li>
+                <li><a href="#">Аксессуары</a></li>
+                <li><a href="#">Новости и акции</a></li>
                 <li><span>Контакты</span>
                     <ul class="sub-menu-cont">
                         <li>
@@ -78,13 +78,13 @@
                     </a>
                 </div>
                 <div class="iphone_11_pro">
-                    <a href="/">
+                    <a href="iphone-11-pro.html">
                         <div class="iphone_11_pro_img"></div>
                         iPhone 11 Pro
                     </a>
                 </div>                
                 <div class="iphone_11">
-                    <a href="/">
+                    <a href="iphone-11.html">
                         <div class="iphone_11_img"></div>
                         iPhone 11
                     </a>
@@ -101,8 +101,6 @@
                         iPhone XS
                     </a>
                 </div>
-
-<!-- ------------------------------------------------------------------------------------------------------------------------------------------ -->
                 <div class="iphone_xr">
                     <a href="/">
                         <div class="iphone_xr_img"></div>
