added pages with iphone repair

--- a/iphone-11.html
+++ b/iphone-11.html
@@ -6,7 +6,7 @@
     <title>Ремонт iPhone 11</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="iphone-11-pro-max.css">
+    <link rel="stylesheet" type="text/css" href="iphone.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
