--- a/iphone-5.html
+++ b/iphone-5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone 11 Pro Max</title>
+    <title>Ремонт iPhone 5</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="iphone.css">
@@ -68,12 +68,12 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone 11 Pro Max</h1>
+        <h1>Ремонт iPhone 5</h1>
         <h3>стоимость услуг по ремонту:</h3>
-        <div class="repair_iphone_11_pro_max"> 
-            <div class="iphone_11_pro_max">
-                <div class="iphone_11_pro_max_img"></div>
-                <h2>iPhone 11 Pro Max</h2>  
+        <div class="repair_iphone_5"> 
+            <div class="iphone_5">
+                <div class="iphone_5_img"></div>
+                <h2>iPhone 5</h2>
                 <h3>наши плюсы:</h3>
                 <div class="our_pluses">
                     <div class="quality">
