--- a/iphone-x.html
+++ b/iphone-x.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone 11 Pro Max</title>
+    <title>Ремонт iPhone X</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="iphone.css">
@@ -68,12 +68,12 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone 11 Pro Max</h1>
+        <h1>Ремонт iPhone X</h1>
         <h3>стоимость услуг по ремонту:</h3>
-        <div class="repair_iphone_11_pro_max"> 
-            <div class="iphone_11_pro_max">
-                <div class="iphone_11_pro_max_img"></div>
-                <h2>iPhone 11 Pro Max</h2>  
+        <div class="repair_iphone_x"> 
+            <div class="iphone_x">
+                <div class="iphone_x_img"></div>
+                <h2>iPhone X</h2>  
                 <h3>наши плюсы:</h3>
                 <div class="our_pluses">
                     <div class="quality">
@@ -108,12 +108,17 @@
                         <tr>
                             <td>Замена стекла</td>
                             <td>20 мин.</td>
-                            <td>3650</td>
+                            <td>2250</td>
                         </tr>
                         <tr>
                             <td>Замена дисплейного модуля Original</td>
                             <td>20 мин.</td>
-                            <td>12200</td>
+                            <td>6400</td>
+                        </tr>
+                        <tr>
+                            <td>Замена дисплейного модуля High Copy (OLED)</td>
+                            <td>20 мин.</td>
+                            <td>4450</td>
                         </tr>
                         <tr>
                             <td>Восстановление функции True Tone</td>
@@ -123,17 +128,17 @@
                         <tr>
                             <td>Замена стекла задней крышки корпуса</td>
                             <td>1 ч.</td>
-                            <td>2850</td>
+                            <td>1350</td>
                         </tr>
                         <tr>
                             <td>Стекло основной камеры</td>
                             <td>30 мин.</td>
-                            <td>950</td>
+                            <td>650</td>
                         </tr>
                         <tr>
                             <td>Корпус Original</td>
                             <td>60 мин.</td>
-                            <td>4150</td>
+                            <td>3250</td>
                         </tr>
                         <tr>
                             <td>Чистка после попадания влаги</td>
@@ -143,57 +148,57 @@
                         <tr>
                             <td>Аккумулятор</td>
                             <td>15 мин.</td>
-                            <td>2350</td>
+                            <td>750/1150</td>
                         </tr>
                         <tr>
                             <td>Основная камера Original</td>
                             <td>10 мин.</td>
-                            <td>3950</td>
+                            <td>1850</td>
                         </tr>
                         <tr>
                             <td>Передняя камера</td>
                             <td>20 мин.</td>
-                            <td>1350</td>
+                            <td>850</td>
                         </tr>
                         <tr>
                             <td>Датчик приближения</td>
                             <td>30 мин.</td>
-                            <td>1050</td>
+                            <td>1150</td>
                         </tr>
                         <tr>
                             <td>Слуховой динамик</td>
                             <td>15 мин.</td>
-                            <td>750</td>
+                            <td>450</td>
                         </tr>
                         <tr>
                             <td>Ремонт кнопки Power</td>
                             <td>30 мин.</td>
-                            <td>850</td>
+                            <td>750</td>
                         </tr>
                         <tr>
                             <td>Кнопки регулировки громкости</td>
                             <td>30 мин.</td>
-                            <td>850</td>
+                            <td>950</td>
                         </tr>
                         <tr>
                             <td>Разъём зарядки</td>
                             <td>30 мин.</td>
-                            <td>850</td>
+                            <td>650</td>
                         </tr>
                         <tr>
                             <td>Полифонический динамик</td>
                             <td>15 мин.</td>
-                            <td>1150</td>
+                            <td>500</td>
                         </tr>
                         <tr>
                             <td>Микрофон</td>
                             <td>30 мин.</td>
-                            <td>1150</td>
+                            <td>750</td>
                         </tr>
                         <tr>
                             <td>Вибро</td>
                             <td>10 мин.</td>
-                            <td>700</td>
+                            <td>650</td>
                         </tr>
                     </tbody>
                 </table>
