--- a/images/iphone-11.html
+++ b/images/iphone-11.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone 11 Pro Max</title>
+    <title>Ремонт iPhone 11</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="iphone.css">
+    <link rel="stylesheet" type="text/css" href="iphone-11-pro-max.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -68,12 +68,12 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone 11 Pro Max</h1>
+        <h1>Ремонт iPhone 11</h1>
         <h3>стоимость услуг по ремонту:</h3>
-        <div class="repair_iphone_11_pro_max"> 
-            <div class="iphone_11_pro_max">
-                <div class="iphone_11_pro_max_img"></div>
-                <h2>iPhone 11 Pro Max</h2>  
+        <div class="repair_iphone_11"> 
+            <div class="iphone_11">
+                <div class="iphone_11_img"></div>
+                <h2>iPhone 11</h2>  
                 <h3>наши плюсы:</h3>
                 <div class="our_pluses">
                     <div class="quality">
@@ -108,12 +108,12 @@
                         <tr>
                             <td>Замена стекла</td>
                             <td>20 мин.</td>
-                            <td>3650</td>
+                            <td>2250</td>
                         </tr>
                         <tr>
                             <td>Замена дисплейного модуля Original</td>
                             <td>20 мин.</td>
-                            <td>12200</td>
+                            <td>7250</td>
                         </tr>
                         <tr>
                             <td>Восстановление функции True Tone</td>
@@ -123,17 +123,17 @@
                         <tr>
                             <td>Замена стекла задней крышки корпуса</td>
                             <td>1 ч.</td>
-                            <td>2850</td>
+                            <td>2250</td>
                         </tr>
                         <tr>
                             <td>Стекло основной камеры</td>
                             <td>30 мин.</td>
-                            <td>950</td>
+                            <td>850</td>
                         </tr>
                         <tr>
                             <td>Корпус Original</td>
                             <td>60 мин.</td>
-                            <td>4150</td>
+                            <td>3850</td>
                         </tr>
                         <tr>
                             <td>Чистка после попадания влаги</td>
@@ -143,12 +143,12 @@
                         <tr>
                             <td>Аккумулятор</td>
                             <td>15 мин.</td>
-                            <td>2350</td>
+                            <td>2050</td>
                         </tr>
                         <tr>
                             <td>Основная камера Original</td>
                             <td>10 мин.</td>
-                            <td>3950</td>
+                            <td>3250</td>
                         </tr>
                         <tr>
                             <td>Передняя камера</td>
@@ -183,12 +183,12 @@
                         <tr>
                             <td>Полифонический динамик</td>
                             <td>15 мин.</td>
-                            <td>1150</td>
+                            <td>850</td>
                         </tr>
                         <tr>
                             <td>Микрофон</td>
                             <td>30 мин.</td>
-                            <td>1150</td>
+                            <td>1350</td>
                         </tr>
                         <tr>
                             <td>Вибро</td>
