--- a/images/repair-apple-iphone.html
+++ b/images/repair-apple-iphone.html
@@ -90,103 +90,103 @@
                     </a>
                 </div>                
                 <div class="iphone_xs_max">
-                    <a href="iphone-xs-max.html">
+                    <a href="/">
                         <div class="iphone_xs_max_img"></div>
                         iPhone XS Max
                     </a>
                 </div>
                 <div class="iphone_xs">
-                    <a href="iphone-xs.html">
+                    <a href="/">
                         <div class="iphone_xs_img"></div>
                         iPhone XS
                     </a>
                 </div>
                 <div class="iphone_xr">
-                    <a href="iphone-xr.html">
+                    <a href="/">
                         <div class="iphone_xr_img"></div>
                         iPhone XR
                     </a>
                 </div>
                 <div class="iphone_x">
-                    <a href="iphone-x.html">
+                    <a href="/">
                         <div class="iphone_x_img"></div>
                         iPhone X
                     </a>
                 </div>                
                 <div class="iphone_8_plus">
-                    <a href="iphone-8-plus.html">
+                    <a href="/">
                         <div class="iphone_8_plus_img"></div>
                         iPhone 8 Plus
                     </a>
                 </div>                
                 <div class="iphone_8">
-                    <a href="iphone-8.html">
+                    <a href="/">
                         <div class="iphone_8_img"></div>
                         iPhone 8
                     </a>
                 </div>
                 <div class="iphone_7_plus">
-                    <a href="iphone-7-plus.html">
+                    <a href="/">
                         <div class="iphone_7_plus_img"></div>
                         iPhone 7 Plus
                     </a>
                 </div>
                 <div class="iphone_7">
-                    <a href="iphone-7.html">
+                    <a href="/">
                         <div class="iphone_7_img"></div>
                         iPhone 7
                     </a>
                 </div>
                 <div class="iphone_se">
-                    <a href="iphone-se.html">
+                    <a href="/">
                         <div class="iphone_se_img"></div>
                         iPhone SE
                     </a>
                 </div>
                 <div class="iphone_6s_plus">
-                    <a href="iphone-6s-plus.html">
+                    <a href="/">
                         <div class="iphone_6s_plus_img"></div>
                         iPhone 6s Plus
                     </a>
                 </div>                
                 <div class="iphone_6s">
-                    <a href="iphone-6s.html">
+                    <a href="/">
                         <div class="iphone_6s_img"></div>
                         iPhone 6s
                     </a>
                 </div>                
                 <div class="iphone_6_plus">
-                    <a href="iphone-6-plus.html">
+                    <a href="/">
                         <div class="iphone_6_plus_img"></div>
                         iPhone 6 Plus
                     </a>
                 </div>
                 <div class="iphone_6">
-                    <a href="iphone-6.html">
+                    <a href="/">
                         <div class="iphone_6_img"></div>
                         iPhone 6
                     </a>
                 </div>
                 <div class="iphone_5c">
-                    <a href="iphone-5c.html">
+                    <a href="/">
                         <div class="iphone_5c_img"></div>
                         iPhone 5c
                     </a>
                 </div>                
                 <div class="iphone_5s">
-                    <a href="iphone-5s.html">
+                    <a href="/">
                         <div class="iphone_5s_img"></div>
                         iPhone 5s
                     </a>
                 </div>                
                 <div class="iphone_5">
-                    <a href="iphone-5.html">
+                    <a href="/">
                         <div class="iphone_5_img"></div>
                         iPhone 5
                     </a>
                 </div>
                 <div class="iphone_4_4s">
-                    <a href="iphone-4-4s.html">
+                    <a href="/">
                         <div class="iphone_4_4s_img"></div>
                         iPhone 4/iPhone 4s
                     </a>
