--- a/iphone-8-plus.html
+++ b/iphone-8-plus.html
@@ -94,9 +94,9 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Услуга</th>
+                            <th>Услуга <span>(запчасть с работой)</span></th>
                             <th>Время</th>
-                            <th>Цена</th>
+                            <th>Цена <span>(грн.)</span></th>
                         </tr>
                     </thead>
                     <tbody>
