added popular breakdowns

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 </head>
-<!-- <body id="gradient"> -->
 <body>
 
     <div id="root"></div>
@@ -103,6 +102,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Enim dolorum culpa commodi facere error quis ut explicabo, non sit reiciendis asperiores quo maxime inventore atque quod, aliquam eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, repudiandae. Repellendus mollitia distinctio asperiores, sunt fugiat rem praesentium minima, laboriosam illo nulla aliquid impedit aliquam doloribus repellat autem labore officiis!</p>
     </main>
+
+    <footer>
+        
+    </footer>
+
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
@@ -113,7 +117,6 @@
           isAutoplay: true
         });
       </script>
-    <script src="background.js"></script>
 </body>
 </html>
 
