--- a/iphone-11-pro-max.html
+++ b/iphone-11-pro-max.html
@@ -199,6 +199,33 @@
                 </table>
             </div>
         </div>
+        <div class="popular_breakdowns">
+            <h1>Наиболее порулярные неисправности:</h1>
+            <h3>со временем, даже самая качественная техника дает сбои и техника Apple не исключение. Вот перечень самых частых поломок и неисправностей:</h3>
+            <div class="breakdowns_list">
+                <ul>
+                    <li><img src="images/brokes/power.png" alt="">Не включается</li>
+                    <li><img src="images/brokes/battery1.png" alt="">Не заряжается</li>
+                    <li><img src="images/brokes/battery.png" alt="">Быстро разряжается</li>
+                    <li><img src="images/brokes/water.png" alt="">Попала вода</li>
+                    <li><img src="images/brokes/broken_glass.png" alt="">Разбилось стекло</li>
+                </ul>
+                <ul>
+                    <li><img src="images/brokes/display.png" alt="">Не работает дисплей</li>
+                    <li><img src="images/brokes/touch.png" alt="">Не работает touch screen</li>
+                    <li><img src="images/brokes/body.png" alt="">Поцарапался корпус</li>
+                    <li><img src="images/brokes/speaker.png" alt="">Не работает звук</li>
+                    <li><img src="images/brokes/mic.png" alt="">Не работает микрофон</li>
+                </ul>
+                <ul>
+                    <li><img src="images/brokes/home.png" alt="">Не работают кнопки</li>
+                    <li><img src="images/brokes/camera.png" alt="">Не рабоает камера</li>
+                    <li><img src="images/brokes/cell.png" alt="">Не ловит сеть</li>
+                    <li><img src="images/brokes/wifi.png" alt="">Не работает Wi-Fi</li>
+                    <li><img src="images/brokes/itunes.png" alt="">Требует iTunes</li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
