--- a/repair-apple-iphone.html
+++ b/repair-apple-iphone.html
@@ -71,127 +71,153 @@
         <h1>Ремонт iPhone</h1>
         <h2>для более подробной информации, выберите модель:</h2>
         <div class="repair_apple_iphone">
-                <div class="iphone_11_pro_max">
-                    <a href="iphone-11-pro-max.html">
-                        <div class="iphone_11_pro_max_img"></div>
-                        iPhone 11 Pro Max
-                    </a>
-                </div>
-                <div class="iphone_11_pro">
-                    <a href="iphone-11-pro.html">
-                        <div class="iphone_11_pro_img"></div>
-                        iPhone 11 Pro
-                    </a>
-                </div>                
-                <div class="iphone_11">
-                    <a href="iphone-11.html">
-                        <div class="iphone_11_img"></div>
-                        iPhone 11
-                    </a>
-                </div>                
-                <div class="iphone_xs_max">
-                    <a href="iphone-xs-max.html">
-                        <div class="iphone_xs_max_img"></div>
-                        iPhone XS Max
-                    </a>
-                </div>
-                <div class="iphone_xs">
-                    <a href="iphone-xs.html">
-                        <div class="iphone_xs_img"></div>
-                        iPhone XS
-                    </a>
-                </div>
-                <div class="iphone_xr">
-                    <a href="iphone-xr.html">
-                        <div class="iphone_xr_img"></div>
-                        iPhone XR
-                    </a>
-                </div>
-                <div class="iphone_x">
-                    <a href="iphone-x.html">
-                        <div class="iphone_x_img"></div>
-                        iPhone X
-                    </a>
-                </div>                
-                <div class="iphone_8_plus">
-                    <a href="iphone-8-plus.html">
-                        <div class="iphone_8_plus_img"></div>
-                        iPhone 8 Plus
-                    </a>
-                </div>                
-                <div class="iphone_8">
-                    <a href="iphone-8.html">
-                        <div class="iphone_8_img"></div>
-                        iPhone 8
-                    </a>
-                </div>
-                <div class="iphone_7_plus">
-                    <a href="iphone-7-plus.html">
-                        <div class="iphone_7_plus_img"></div>
-                        iPhone 7 Plus
-                    </a>
-                </div>
-                <div class="iphone_7">
-                    <a href="iphone-7.html">
-                        <div class="iphone_7_img"></div>
-                        iPhone 7
-                    </a>
-                </div>
-                <div class="iphone_se">
-                    <a href="iphone-se.html">
-                        <div class="iphone_se_img"></div>
-                        iPhone SE
-                    </a>
-                </div>
-                <div class="iphone_6s_plus">
-                    <a href="iphone-6s-plus.html">
-                        <div class="iphone_6s_plus_img"></div>
-                        iPhone 6s Plus
-                    </a>
-                </div>                
-                <div class="iphone_6s">
-                    <a href="iphone-6s.html">
-                        <div class="iphone_6s_img"></div>
-                        iPhone 6s
-                    </a>
-                </div>                
-                <div class="iphone_6_plus">
-                    <a href="iphone-6-plus.html">
-                        <div class="iphone_6_plus_img"></div>
-                        iPhone 6 Plus
-                    </a>
-                </div>
-                <div class="iphone_6">
-                    <a href="iphone-6.html">
-                        <div class="iphone_6_img"></div>
-                        iPhone 6
-                    </a>
-                </div>
-                <div class="iphone_5c">
-                    <a href="iphone-5c.html">
-                        <div class="iphone_5c_img"></div>
-                        iPhone 5c
-                    </a>
-                </div>                
-                <div class="iphone_5s">
-                    <a href="iphone-5s.html">
-                        <div class="iphone_5s_img"></div>
-                        iPhone 5s
-                    </a>
-                </div>                
-                <div class="iphone_5">
-                    <a href="iphone-5.html">
-                        <div class="iphone_5_img"></div>
-                        iPhone 5
-                    </a>
-                </div>
-                <div class="iphone_4_4s">
-                    <a href="iphone-4-4s.html">
-                        <div class="iphone_4_4s_img"></div>
-                        iPhone 4/iPhone 4s
-                    </a>
-                </div>
-
+            <div class="iphone_11_pro_max">
+                <a href="iphone-11-pro-max.html">
+                    <div class="iphone_11_pro_max_img"></div>
+                    iPhone 11 Pro Max
+                </a>
+            </div>
+            <div class="iphone_11_pro">
+                <a href="iphone-11-pro.html">
+                    <div class="iphone_11_pro_img"></div>
+                    iPhone 11 Pro
+                </a>
+            </div>                
+            <div class="iphone_11">
+                <a href="iphone-11.html">
+                    <div class="iphone_11_img"></div>
+                    iPhone 11
+                </a>
+            </div>                
+            <div class="iphone_xs_max">
+                <a href="iphone-xs-max.html">
+                    <div class="iphone_xs_max_img"></div>
+                    iPhone XS Max
+                </a>
+            </div>
+            <div class="iphone_xs">
+                <a href="iphone-xs.html">
+                    <div class="iphone_xs_img"></div>
+                    iPhone XS
+                </a>
+            </div>
+            <div class="iphone_xr">
+                <a href="iphone-xr.html">
+                    <div class="iphone_xr_img"></div>
+                    iPhone XR
+                </a>
+            </div>
+            <div class="iphone_x">
+                <a href="iphone-x.html">
+                    <div class="iphone_x_img"></div>
+                    iPhone X
+                </a>
+            </div>                
+            <div class="iphone_8_plus">
+                <a href="iphone-8-plus.html">
+                    <div class="iphone_8_plus_img"></div>
+                    iPhone 8 Plus
+                </a>
+            </div>                
+            <div class="iphone_8">
+                <a href="iphone-8.html">
+                    <div class="iphone_8_img"></div>
+                    iPhone 8
+                </a>
+            </div>
+            <div class="iphone_7_plus">
+                <a href="iphone-7-plus.html">
+                    <div class="iphone_7_plus_img"></div>
+                    iPhone 7 Plus
+                </a>
+            </div>
+            <div class="iphone_7">
+                <a href="iphone-7.html">
+                    <div class="iphone_7_img"></div>
+                    iPhone 7
+                </a>
+            </div>
+            <div class="iphone_se">
+                <a href="iphone-se.html">
+                    <div class="iphone_se_img"></div>
+                    iPhone SE
+                </a>
+            </div>
+            <div class="iphone_6s_plus">
+                <a href="iphone-6s-plus.html">
+                    <div class="iphone_6s_plus_img"></div>
+                    iPhone 6s Plus
+                </a>
+            </div>                
+            <div class="iphone_6s">
+                <a href="iphone-6s.html">
+                    <div class="iphone_6s_img"></div>
+                    iPhone 6s
+                </a>
+            </div>                
+            <div class="iphone_6_plus">
+                <a href="iphone-6-plus.html">
+                    <div class="iphone_6_plus_img"></div>
+                    iPhone 6 Plus
+                </a>
+            </div>
+            <div class="iphone_6">
+                <a href="iphone-6.html">
+                    <div class="iphone_6_img"></div>
+                    iPhone 6
+                </a>
+            </div>
+            <div class="iphone_5c">
+                <a href="iphone-5c.html">
+                    <div class="iphone_5c_img"></div>
+                    iPhone 5c
+                </a>
+            </div>                
+            <div class="iphone_5s">
+                <a href="iphone-5s.html">
+                    <div class="iphone_5s_img"></div>
+                    iPhone 5s
+                </a>
+            </div>                
+            <div class="iphone_5">
+                <a href="iphone-5.html">
+                    <div class="iphone_5_img"></div>
+                    iPhone 5
+                </a>
+            </div>
+            <div class="iphone_4_4s">
+                <a href="iphone-4-4s.html">
+                    <div class="iphone_4_4s_img"></div>
+                    iPhone 4/iPhone 4s
+                </a>
+            </div>
+        </div>
+        <div class="popular_breakdowns">
+            <h1>Наиболее порулярные неисправности:</h1>
+            <h3>со временем, даже самая качественная техника дает сбои и техника Apple не исключение. Вот перечень самых частых поломок и неисправностей:</h3>
+            <div class="breakdowns_list">
+                <ul>
+                    <li><img src="images/brokes/power.png" alt="">Не включается</li>
+                    <li><img src="images/brokes/battery1.png" alt="">Не заряжается</li>
+                    <li><img src="images/brokes/battery.png" alt="">Быстро разряжается</li>
+                    <li><img src="images/brokes/water.png" alt="">Попала вода</li>
+                    <li><img src="images/brokes/broken_glass.png" alt="">Разбилось стекло</li>
+                </ul>
+                <ul>
+                    <li><img src="images/brokes/display.png" alt="">Не работает дисплей</li>
+                    <li><img src="images/brokes/touch.png" alt="">Не работает touch screen</li>
+                    <li><img src="images/brokes/body.png" alt="">Поцарапался корпус</li>
+                    <li><img src="images/brokes/speaker.png" alt="">Не работает звук</li>
+                    <li><img src="images/brokes/mic.png" alt="">Не работает микрофон</li>
+                </ul>
+                <ul>
+                    <li><img src="images/brokes/home.png" alt="">Не работают кнопки</li>
+                    <li><img src="images/brokes/camera.png" alt="">Не рабоает камера</li>
+                    <li><img src="images/brokes/cell.png" alt="">Не ловит сеть</li>
+                    <li><img src="images/brokes/wifi.png" alt="">Не работает Wi-Fi</li>
+                    <li><img src="images/brokes/itunes.png" alt="">Требует iTunes</li>
+                </ul>
+            </div>
         </div>
     </main>
 </body>
