changed view of breakdowns

--- a/repair-apple-iphone.html
+++ b/repair-apple-iphone.html
@@ -196,6 +196,43 @@
             <h1>Наиболее порулярные неисправности:</h1>
             <h3>со временем, даже самая качественная техника дает сбои и техника Apple не исключение. Вот перечень самых частых поломок и неисправностей:</h3>
             <div class="breakdowns_list">
+                <div class="power_breakdown">
+                    <img src="images/brokes/power.png" alt="">Не включается
+                    <div class="power_description">
+                        Если не включается, то...
+                    </div>
+                </div>
+                <div class="charge_breakdown">
+                    <img src="images/brokes/battery1.png" alt="">Не заряжается
+                    <div class="charge_description">
+                        Если не заряжается, то, Если не заряжается, то...
+                    </div>
+                </div>
+                <div class="battery_breakdown">
+                    <img src="images/brokes/battery.png" alt="">Быстро разряжается
+                    <div class="battery_description">
+                        Если быстро разряжается, то...Если быстро разряжается, то...
+                    </div>
+                </div>
+                <div class="water_breakdown">
+                    <img src="images/brokes/water.png" alt="">Попала вода
+                    <div class="water_description">
+                        Если попала вода, то...Если попала вода, то...
+                    </div>
+                </div>
+                <div class="glass_breakdown">
+                    <img src="images/brokes/broken_glass.png" alt="">Разбилось стекло
+                    <div class="glass_description">
+                        Если разбилось стекло, то...Если разбилось стекло, то...
+                    </div>
+                </div>
+                <div class="display_breakdown">
+                    <img src="images/brokes/display.png" alt="">Не работает дисплей
+                    <div class="display_description">
+                        Если не работает дисплей, то...Если не работает дисплей, то...
+                    </div>
+                </div>
+<!-- 
                 <ul>
                     <li><img src="images/brokes/power.png" alt="">Не включается</li>
                     <li><img src="images/brokes/battery1.png" alt="">Не заряжается</li>
@@ -216,9 +253,12 @@
                     <li><img src="images/brokes/cell.png" alt="">Не ловит сеть</li>
                     <li><img src="images/brokes/wifi.png" alt="">Не работает Wi-Fi</li>
                     <li><img src="images/brokes/itunes.png" alt="">Требует iTunes</li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </main>
+
+<footer></footer>
+
 </body>
 </html>
