--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="menu">
             <ul class="main-menu">
                 <li><a href="#">О нас</a></li>
-                <li><a href="#">Ремонт</a>
+                <li><span>Ремонт</span>
                     <ul class="sub-menu-repair">
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="#">iPhone</a></li>
+                                <li><a href="repair-apple-iphone.html">iPhone</a></li>
                                 <li><a href="#">iPad</a></li>
                                 <li><a href="#">Watch</a></li>
                                 <li><a href="#">MacBook</a></li>
@@ -104,12 +104,11 @@
     </main>
 
     <footer>
-        
+
     </footer>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="app.js"></script>
     <script src="slider.js"></script>
     <script>
